crates/pardosa-genome/tests/compile_fail/evt_001.rs
//! EVT-001 — GenomeSafe cannot be derived for unions.
use pardosa_genome::GenomeSafe;

#[derive(GenomeSafe)]
union BadUnion {
    a: u32,
    b: f32,
}

fn main() {}
